# onnx

./: .lintrunner.toml  CONTRIBUTING.md  RELEASE-MANAGEMENT.md  pyproject.toml  pyproject_pylint.toml  requirements-dev.txt  setup.py  tests
.azure-pipelines/: Linux-CI.yml  MacOS-CI.yml  Windows-CI.yml
.github/workflows/: build.yml  codeql.yml  pages.yml  release_linux_aarch64.yml  release_linux_x86_64.yml  release_mac.yml  release_win.yml
docs/: Operators.md  TestCoverage.md
docs/docsgen/source/api/: index.md
docs/docsgen/source/technical/: float8.md
onnx/: __init__.py  checker.py  compose.py  cpp2py_export.cc  external_data_helper.py  gen_proto.py  helper.py  hub.py  numpy_helper.py  parser.py  printer.py  serialization.py  shape_inference.py  utils.py  version_converter.py
onnx/backend/: base.py
onnx/backend/test/case/model/: __init__.py
onnx/backend/test/report/: coverage.py
onnx/backend/test/runner/: __init__.py
onnx/defs/: __init__.py
onnx/defs/math/: defs.cc
onnx/reference/: reference_evaluator.py
onnx/reference/ops/: _op_common_window.py  op_blackman_window.py  op_hamming_window.py  op_hann_window.py
onnx/test/: automatic_upgrade_test.py  basic_test.py  checker_test.py  compose_test.py  hub_test.py  reference_evaluator_backend_test.py  reference_evaluator_test.py
onnx/version_converter/: convert.h
onnx/version_converter/adapters/: axis_attribute_to_input.h  axis_input_to_attribute.h
